--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:image" content="./todo1-edited.png">
+    <meta property="og:description" content="This is an application for task and time management. It utilizes a simple user interface where users can create projects and add tasks or to-dos to specific projects.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/bfb663eab2.js" crossorigin="anonymous"></script>
-    <title>ToDo</title>
+    <title>taskIT</title>
 </head>
 <body>
     <div class='d-flex container-fluid cotent'>
